Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5430

HA primary broker does not go active if there are no replicated queues.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.24
    • 0.25
    • C++ Clustering
    • None

    Description

      To reproduce:

      1. Start a 3 broker cluster, do not create any replicated queues
      2. Promote a broker to primary, wait for it to be "active".
      3. Kill the primary, promote another broker to primary

      Expected result: The new primary broker becomes "active"

      Actual result: The new primary remains "recovering"

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: