QPID-5430: HA primary broker does not go active if there are no replicated queues.

Primary::opened was not checking if the primary was ready after a knonw backup
reconnected, only when a replicated queue became ready. Thus if there were
no replicated queues the primary never became ready.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1552025 13f79535-47bb-0310-9956-ffa450edef68